--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,53 @@
-#header-nav {
-  height: 70px;
+#nav-list {
+  margin: 0;
 }
 
 .container {
   width: 100%;
 }
 
-.navbar-brand  h1 {
+#header-nav {
+  background-color: coral;
+}
+
+#header-nav .container {
+  min-height: 62px;
+}
+.navbar-brand h1 {
+  margin-top: 0px;
+  color: black;
+}
+
+#collapsable-nav {
+  padding: 0;
+  border: 0px;
+}
+
+.navbar-default .navbar-nav > li > a {
+  color: black;
+  font-weight: bold;
+}
+
+#collapsable-nav li:hover {
+  background-color: white;
+}
+
+.navbar-header button.navbar-toggle {
+  clear: both;
+  margin-top: -30px;
+  background-color: white;
+  border-color: #888;
+}
+
+#main-content h1:first-child {
   margin-top: 0;
 }
 
-button.navbar-toggle {
-  margin-top: 17px;
+h1 {
+  font-size: 30px;
 }
+
+
 
 /********** Desktop view only (md+lg) **********/
 @media (min-width: 992px) {
@@ -33,9 +68,6 @@ button.navbar-toggle {
 /********** Mobile view only (xs) **********/
 @media (max-width: 767px) {
 
-  .navbar-brand {
-    margin-left: -15px;
-  }
   .navbar-brand  h1::after {
     content: " (mobile)";
   }
