--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
   width: 100%;
 }
 
-#header-nav {
+#header-nav, #chicken-block {
   background-color: coral;
 }
 
@@ -34,41 +34,45 @@
 
 .navbar-header button.navbar-toggle {
   clear: both;
-  margin-top: -30px;
+  margin-top: -36px;
   background-color: white;
   border-color: #888;
 }
 
 #main-content h1:first-child {
   margin-top: 0;
+  margin-bottom: 30px;
 }
 
 h1 {
   font-size: 30px;
+  font-weight: bold;
 }
 
+h2 {
+  font-size: 20px;
+  font-weight: bold;
+}
 
+#chicken-block {
+  margin: 10px ;
+}
 
 /********** Desktop view only (md+lg) **********/
 @media (min-width: 992px) {
 
-  .navbar-brand  h1::after {
-    content: " (desktop)";
-  }
 }
 
 /********** Tablet view only (sm) **********/
 @media (min-width: 768px) and (max-width: 991px) {
 
-  .navbar-brand  h1::after {
-    content: " (tablet)";
-  }
 }
 
 /********** Mobile view only (xs) **********/
 @media (max-width: 767px) {
 
-  .navbar-brand  h1::after {
-    content: " (mobile)";
+  #chicken-block {
+    margin-left: 30px ;
+    margin-right: 30px ;
   }
 }
