Optional devs completed
Well done commander !

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,12 @@
 }
 
 .navbar-default .navbar-nav > li > a {
-  color: black;
+  color: white;
+  font-weight: bold;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+  color: coral;
   font-weight: bold;
 }
 
@@ -53,6 +58,7 @@ h3 {
   font-size: 24px;
   font-weight: bold;
   margin: 10px 0 20px;
+  color: white;
 }
 
 #chicken-block {
